--- a/eosc/doc/latex/classtokenika_1_1eosc_1_1_command_options.tex
+++ b/eosc/doc/latex/classtokenika_1_1eosc_1_1_command_options.tex
@@ -21,8 +21,8 @@ Inheritance diagram for tokenika\+:\+:eosc\+:\+:Command\+Options\+:\nopagebreak
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{classtokenika_1_1eosc_1_1_command_options_a263a61f90aa324090e2d9d592b2d4ad6}\label{classtokenika_1_1eosc_1_1_command_options_a263a61f90aa324090e2d9d592b2d4ad6}} 
-{\bfseries Command\+Options} (int argc, const char $\ast$$\ast$argv)
+\mbox{\Hypertarget{classtokenika_1_1eosc_1_1_command_options_a61d20e4e3a9564c242eecfe814e96783}\label{classtokenika_1_1eosc_1_1_command_options_a61d20e4e3a9564c242eecfe814e96783}} 
+{\bfseries Command\+Options} (int argc, const char $\ast$argv\mbox{[}$\,$\mbox{]})
 \item 
 \mbox{\Hypertarget{classtokenika_1_1eosc_1_1_command_options_a4fa1c9defc45b139e415c79c43b15e5d}\label{classtokenika_1_1eosc_1_1_command_options_a4fa1c9defc45b139e415c79c43b15e5d}} 
 void {\bfseries go} ()
