--- a/eosc/doc/latex/classtokenika_1_1eosc_1_1_eosc_command.tex
+++ b/eosc/doc/latex/classtokenika_1_1eosc_1_1_eosc_command.tex
@@ -41,6 +41,15 @@ static std\+::string {\bfseries host} = \char`\"{}\char`\"{}
 \item 
 \mbox{\Hypertarget{classtokenika_1_1eosc_1_1_eosc_command_a8a10e9cc90a957a70f40a63c37581452}\label{classtokenika_1_1eosc_1_1_eosc_command_a8a10e9cc90a957a70f40a63c37581452}} 
 static std\+::string {\bfseries port} = \char`\"{}\char`\"{}
+\item 
+\mbox{\Hypertarget{classtokenika_1_1eosc_1_1_eosc_command_a59e21016dc35f824b680b45a4be4b2e0}\label{classtokenika_1_1eosc_1_1_eosc_command_a59e21016dc35f824b680b45a4be4b2e0}} 
+static std\+::string {\bfseries wallet\+Host} = \char`\"{}\char`\"{}
+\item 
+\mbox{\Hypertarget{classtokenika_1_1eosc_1_1_eosc_command_abd597bd241a7b1f371d46c42dd8daa53}\label{classtokenika_1_1eosc_1_1_eosc_command_abd597bd241a7b1f371d46c42dd8daa53}} 
+static std\+::string {\bfseries wallet\+Port} = \char`\"{}\char`\"{}
+\item 
+\mbox{\Hypertarget{classtokenika_1_1eosc_1_1_eosc_command_a32486030c8ca151b1492c124b6d380d0}\label{classtokenika_1_1eosc_1_1_eosc_command_a32486030c8ca151b1492c124b6d380d0}} 
+static bool {\bfseries verbose} = false
 \end{DoxyCompactItemize}
 \subsection*{Protected Attributes}
 \begin{DoxyCompactItemize}
