--- a/eosc/doc/latex/eosc__command_8hpp.tex
+++ b/eosc/doc/latex/eosc__command_8hpp.tex
@@ -37,6 +37,12 @@ class \hyperlink{classtokenika_1_1eosc_1_1_command_options}{tokenika\+::eosc\+::
 \item 
 \mbox{\Hypertarget{eosc__command_8hpp_a857e89f5c53727699c25d8b17b9c10ed}\label{eosc__command_8hpp_a857e89f5c53727699c25d8b17b9c10ed}} 
 \#define {\bfseries E\+O\+S\+C\+\_\+\+E\+R\+R\+OR}~\char`\"{}error\char`\"{}
+\item 
+\mbox{\Hypertarget{eosc__command_8hpp_ae2080650c6016c93954c88f97fc60e2e}\label{eosc__command_8hpp_ae2080650c6016c93954c88f97fc60e2e}} 
+\#define {\bfseries H\+O\+S\+T\+\_\+\+D\+E\+F\+A\+U\+LT}~\char`\"{}localhost\char`\"{}
+\item 
+\mbox{\Hypertarget{eosc__command_8hpp_aebaae3989ccb20febb9e80449c19f8d3}\label{eosc__command_8hpp_aebaae3989ccb20febb9e80449c19f8d3}} 
+\#define {\bfseries P\+O\+R\+T\+\_\+\+D\+E\+F\+A\+U\+LT}~\char`\"{}8888\char`\"{}
 \end{DoxyCompactItemize}
 \subsection*{Functions}
 \begin{DoxyCompactItemize}
