--- a/eosc/doc/latex/files.tex
+++ b/eosc/doc/latex/files.tex
@@ -2,9 +2,11 @@
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{{\bfseries boost\+\_\+tdd1/const\+\_\+string.\+hpp} }{\pageref{boost__tdd1_2const__string_8hpp}}{}
 \item\contentsline{section}{{\bfseries boost\+\_\+tdd2/const\+\_\+string.\+hpp} }{\pageref{boost__tdd2_2const__string_8hpp}}{}
+\item\contentsline{section}{{\bfseries eosc.\+hpp} }{\pageref{eosc_8hpp}}{}
 \item\contentsline{section}{\hyperlink{eosc__command_8hpp}{eosc\+\_\+command.\+hpp} \\*Tool for sending transactions and querying state from E\+OS blockchain }{\pageref{eosc__command_8hpp}}{}
 \item\contentsline{section}{{\bfseries eosc\+\_\+config.\+h} }{\pageref{eosc__config_8h}}{}
 \item\contentsline{section}{\hyperlink{eosc__get__commands_8hpp}{eosc\+\_\+get\+\_\+commands.\+hpp} }{\pageref{eosc__get__commands_8hpp}}{}
+\item\contentsline{section}{{\bfseries eosc\+\_\+test.\+hpp} }{\pageref{eosc__test_8hpp}}{}
 \item\contentsline{section}{{\bfseries asyn\+\_\+tcp\+\_\+echo\+\_\+server/targetver.\+h} }{\pageref{asyn__tcp__echo__server_2targetver_8h}}{}
 \item\contentsline{section}{{\bfseries blocking\+\_\+tcp\+\_\+echo\+\_\+client/targetver.\+h} }{\pageref{blocking__tcp__echo__client_2targetver_8h}}{}
 \item\contentsline{section}{{\bfseries boost\+\_\+tdd1/targetver.\+h} }{\pageref{boost__tdd1_2targetver_8h}}{}
