--- a/docs/demo/03.CompilingEOSContractsInEOSFactory.md
+++ b/docs/demo/03.CompilingEOSContractsInEOSFactory.md
@@ -8,6 +8,8 @@ This tutorial assumes that you have successfully installed *EOSFactory*. If it's
 
 We also assume that you are familiar with the material covered in [Getting Started with EOS Contracts in *EOSFactory*](GettingStartedwithEOSContractsinEOSFactory.md).
 
+Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://github.com/EOSIO/eos/wiki/Tutorial-Hello-World-Contract), as it presents the default way to compile and deploy smart-contracts in EOS. What we present is an alternative.
+
 ## Set up the Workspace
 
 In *Visual Studio Code*, switch to the Bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
