--- a/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
@@ -1,12 +1,12 @@
 # Getting Started with EOS Contracts in *EOSFactory* 
 
-The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python syntax can be used to make interacting with EOS easy & intuitive.
+The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python CLI can be used to make interacting with EOS easy & intuitive.
 
 ## Prerequisites
 
 This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [this guide](InstallingEOSFactory.md).
 
-We also assume that you are familiar with [the official EOS tutorials](https://github.com/EOSIO/eos/wiki/Tutorial-Getting-Started-With-Contracts), as they will give you a broader context and explain the rationale behind EOS smart-contracts.
+We also assume that you are familiar with the official [EOS tutorials](https://github.com/EOSIO/eos/wiki/Tutorial-Getting-Started-With-Contracts), as they will give you a broader context and explain the rationale behind EOS smart-contracts.
 
 Once you have a good grasp how standard EOS tools like `cleos` and `eosiocpp` work, you'll be able to appreciate how quickly similar tasks can be performed with *EOSFactory*, thus speeding up the smart-contract development cycle.
 
