--- a/docs/demo/03.CompilingEOSContractsInEOSFactory.md
+++ b/docs/demo/03.CompilingEOSContractsInEOSFactory.md
@@ -1,6 +1,6 @@
 # Compiling EOS Contracts in *EOSFactory*
 
-The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python syntax can be used to make compiling EOS contracts easy & intuitive.
+The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python CLI can be used to make compiling EOS contracts easy & intuitive.
 
 ## Prerequisites
 
@@ -40,7 +40,7 @@ To create a contract template:
 $ template = pyteos.Template("hello")
 ```
 
-To check the path where the contract's files are located:
+To check the directory where the contract's files are located:
 
 ```
 $ template.path()
@@ -48,7 +48,7 @@ $ template.path()
 
 ## Add C++ code
 
-Add the following content to the `hello.cpp` file:
+Edit the `hello.cpp` file in *Visual Studio Code* and add the following content to it:
 
 ```
 #include <eosiolib/eosio.hpp>
@@ -119,7 +119,7 @@ void hi( account_name user ) {
 }
 ```
 
-And then re-compile and re-deploy it:
+And then re-compile and re-deploy the contract:
 
 ```
 compile(template)
