--- a/docs/demo/01.InstallingEOSFactory.md
+++ b/docs/demo/01.InstallingEOSFactory.md
@@ -31,12 +31,14 @@ In you are on Windows, navigate to `Preferences -> Settings` and overwrite the d
 Still in VSC, open the bash terminal, navigate to the `eosfactory` folder and run the build script:
 
 ```
-./ build.sh
+./build.sh -e /mnt/d/Workspaces/EOS/eos -c gnu
 ```
+
+**NOTE:** When the build process is finished you need to restart VSC.
 
 ## Run Python CLI
 
-If everything has gone smoothly, in the Bash terminal type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
+In *Visual Studio Code*, switch to the Bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
 Next, import the *EOSFactory* Python toolset:
 
@@ -47,7 +49,7 @@ import pyteos
 We'll verify that *EOSFactory* works and is properly hooked up to *EOSIO* by attempting to start a local testnet:
 
 ```
-node.run()
+node.reset()
 ```
 
 Assuming everything has worked properly, you should see a new console window pop up and a block generation message appearing there every 0.5 seconds:
@@ -67,15 +69,3 @@ And to exit the Python CLI and get back to the Bash terminal prompt:
 ```
 exit()
 ```
-
-
-
-
-
-
-
----
-
-echo 'export EOSIO_SOURCE_DIR=/mnt/x/Workspaces/EOS/eos' >> ~/.bashrc
-
-Python3
