--- a/docs/demo/03.CompilingEOSContractsInEOSFactory.md
+++ b/docs/demo/03.CompilingEOSContractsInEOSFactory.md
@@ -23,13 +23,13 @@ import pyteos
 Then start the testnet:
 
 ```
-$ node.run()
+node.reset()
 ```
 
 And initialize the workspace:
 
 ```
-$ init()
+node.init()
 ```
 
 ## Create a Contract Template
@@ -37,13 +37,13 @@ $ init()
 To create a contract template:
 
 ```
-$ template = pyteos.Template("hello")
+template = Template("hello")
 ```
 
 To check the directory where the contract's files are located:
 
 ```
-$ template.path()
+template.path()
 ```
 
 ## Add C++ code
@@ -73,17 +73,17 @@ EOSIO_ABI( hello, (hi) )
 You can generate the web assembly code and ABI separately:
 
 ```
-wast(template)
+template.wast()
 ```
 
 ```
-abi(template)
+template.abi()
 ```
 
 Or you can generate both at the same time:
 
 ```
-compile(template)
+template.compile()
 ```
 
 ## Deploy the Contract
@@ -103,7 +103,7 @@ $ contract.push_action("hi", '{"user":"alice"}', alice)
 ```
 
 ```
-$ contract.push_action("hi", '{"user":"carol"}', alice)
+contract.push_action("hi", '{"user":"carol"}', alice)
 ```
 
 All the above variations should work, as the contract allows anyone to authorize it.
@@ -122,7 +122,7 @@ void hi( account_name user ) {
 And then re-compile and re-deploy the contract:
 
 ```
-compile(template)
+template.compile()
 ```
 
 ```
