--- a/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
@@ -20,12 +20,12 @@ Next, import the *EOSFactory* Python toolset:
 import pyteos
 ```
 
-## Manage a Local Testnet
+## Start a Local Testnet
 
 To start your own single-node local testnet:
 
 ```
-node.run()
+node.reset()
 ```
 
 Assuming everything has worked properly, you should see a new console window pop up and a block generation message appearing there every 0.5 seconds:
@@ -34,26 +34,40 @@ Assuming everything has worked properly, you should see a new console window pop
 eosio generated block 046b9984... #101527 @ 2018-05-01T14:24:58.000 with 0 trxs
 ```
 
+To get information about the testnet:
+
+```
+node.info()
+```
+
+## Manage the Local Testnet
+
+#### Stop & continue
+
 To stop and then continue running the testnet:
 
 ```
 node.stop()
-//wait until the testnet window disappears
-node.run()
 ```
 
-And to stop and reset the testnet:
+Wait until the testnet window disappears, and then:
+
+```
+node.continue()
+```
+
+#### Stop & reset
+
+To stop and reset the testnet:
 
 ```
 node.stop()
-//wait until the testnet window disappears
+```
+
+Wait until the testnet window disappears, and then:
+
+```
 node.reset()
-```
-
-To get information about the testnet:
-
-```
-$ node.info()
 ```
 
 ## Initialize the Workspace
@@ -61,7 +75,7 @@ $ node.info()
 To initialize the workspace:
 
 ```
-$ init()
+node.init()
 ```
 
 The initialization process does the following things:
@@ -74,7 +88,7 @@ The initialization process does the following things:
 If you need additional test accounts, you can easily create them:
 
 ```
-$ charlie = Account("charlie", eosio)
+charlie = Account("charlie", eosio)
 ```
 
 **NOTE:** The first argument indicates the new account's name, whereas the second indicates the master account, in this case the default `eosio` account.
@@ -82,8 +96,11 @@ $ charlie = Account("charlie", eosio)
 If you need to lock or unlock your wallet, use the `wallet` object to do it:
 
 ```
-$ wallet.lock()
-$ wallet.unlock()
+wallet.lock()
+```
+
+```
+wallet.unlock()
 ```
 
 ## Deploy the EOS Token Contract
@@ -103,10 +120,10 @@ contract = Contract("eosio.token")
 To create a new token we call the `create` action on the `eosio.token` contract with the proper arguments for this action:
 
 ```
-contract.push_action("create", '{"issuer":"eosio", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}', contract.owner)
+contract.push_action("create", '{"issuer":"eosio", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}', contract.account)
 ```
 
-**NOTE:** The `push_action` method takes three arguments: the action name, its arguments in JSON format, and the account whose permission is needed. In this case the permission is assigned to `contract.onwer`, i.e. the account holding the contract.
+**NOTE:** The `push_action` method takes three arguments: the action name, its arguments in JSON format, and the account whose permission is needed. In this case the permission is assigned to `contract.account`, i.e. the account holding the contract.
 
 ## Issue EOS Tokens
 
@@ -121,7 +138,7 @@ $ contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo
 If you want to see the actual transaction that was broadcast, you can use the `show_action` method:
 
 ```
-$ contract.show_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}', eosio)
+contract.show_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}', eosio)
 ```
 
 ## Transfer EOS Tokens
@@ -139,8 +156,11 @@ $ contract.push_action("transfer", '{"from":"alice", "to":"carol", "quantity":"2
 From the contract's ABI we know that the table keeping track of the token balances is called `accounts`. Let's check the state of both accounts involved in the previous transaction:
 
 ```
-$ contract.get_table("accounts", alice)
-$ contract.get_table("accounts", carol)
+contract.get_table("accounts", alice)
+```
+
+```
+contract.get_table("accounts", carol)
 ```
 
 **NOTE:** The `get_table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
