--- a/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
@@ -130,7 +130,7 @@ contract.push_action("create", '{"issuer":"eosio", "maximum_supply":"1000000000.
 Now that we have created the token, the issuer can issue new tokens to `alice`:
 
 ```
-$ contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}', eosio)
+contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}', eosio)
 ```
 
 **NOTE:** In this case the permission is assigned to the default `eosio` account.
@@ -146,7 +146,7 @@ contract.show_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":
 Now that account `alice` has tokens, we will transfer some to account `carol`.  
 
 ```
-$ contract.push_action("transfer", '{"from":"alice", "to":"carol", "quantity":"25.0000 EOS", "memo":"memo"}', alice)
+contract.push_action("transfer", '{"from":"alice", "to":"carol", "quantity":"25.0000 EOS", "memo":"memo"}', alice)
 ```
 
 **NOTE:** As the third argument we pass the reference to the account `alice` to indicate that she is the one who authorized this action.
