--- a/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
@@ -18,6 +18,8 @@ Next, import the *EOSFactory* Python toolset:
 
 ```
 import pyteos
+import session as s
+from session import *
 ```
 
 ## Start a Local Testnet
