--- a/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
@@ -18,8 +18,8 @@ Next, import the *EOSFactory* Python toolset:
 
 ```
 import pyteos
-import session as s
-from session import *
+//import session as s
+//from session import *
 ```
 
 ## Start a Local Testnet
@@ -127,6 +127,8 @@ contract.push_action("create", '{"issuer":"eosio", "maximum_supply":"1000000000.
 
 **NOTE:** The `push_action` method takes three arguments: the action name, its arguments in JSON format, and the account whose permission is needed. In this case the permission is assigned to `contract.account`, i.e. the account holding the contract.
 
+**NOTE:** If you want to see the actual transaction without broadcasting it, use the `show_action` method instead of `push_action`.
+
 ## Issue EOS Tokens
 
 Now that we have created the token, the issuer can issue new tokens to `alice`:
@@ -136,12 +138,6 @@ contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":
 ```
 
 **NOTE:** In this case the permission is assigned to the default `eosio` account.
-
-If you want to see the actual transaction that was broadcast, you can use the `show_action` method:
-
-```
-contract.show_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}', eosio)
-```
 
 ## Transfer EOS Tokens
 
