default third arg

--- a/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/demo/02.InteractingWithEOSContractsInEOSFactory.md
@@ -122,10 +122,10 @@ contract = Contract("eosio.token")
 To create a new token we call the `create` action on the `eosio.token` contract with the proper arguments for this action:
 
 ```
-contract.push_action("create", '{"issuer":"eosio", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}', contract.account)
+contract.push_action("create", '{"issuer":"eosio", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}')
 ```
 
-**NOTE:** The `push_action` method takes three arguments: the action name, its arguments in JSON format, and the account whose permission is needed. In this case the permission is assigned to `contract.account`, i.e. the account holding the contract.
+**NOTE:** The `push_action` method takes two arguments: the action name and its arguments in JSON format. Optionally, you can also add a third argument, i.e. the account whose permission is needed, but in this case it's not necessary, as the permission defaults to the account holding the contract.
 
 **NOTE:** If you want to see the actual transaction without broadcasting it, use the `show_action` method instead of `push_action`.
 
