--- a/docs/demo/01.InstallingEOSFactory.md
+++ b/docs/demo/01.InstallingEOSFactory.md
@@ -31,10 +31,16 @@ In you are on Windows, navigate to `Preferences -> Settings` and overwrite the d
 Still in VSC, open the bash terminal, navigate to the `eosfactory` folder and run the build script:
 
 ```
-./build.sh -e /mnt/d/Workspaces/EOS/eos -c gnu
+./build.sh -e /path/to/your/local/EOSIO/repository -c gnu
 ```
 
-**NOTE:** When the build process is finished you need to restart VSC.
+**NOTE:** Make sure to supply the correct path for the `e` parameter - it's meant to be the path to the *EOSIO* source code that you have cloned (and then compiled) from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/mnt/x/Workspaces/EOS/eos` but yours will most probably be different:
+
+```
+./build.sh -e /mnt/x/Workspaces/EOS/eos -c gnu
+```
+
+**NOTE:** When the build process is finished you'll need to restart VSC.
 
 ## Run Python CLI
 
