--- a/docs/guides/01.InstallingEOSFactory.md
+++ b/docs/guides/01.InstallingEOSFactory.md
@@ -26,18 +26,70 @@ In you are on Windows, navigate to `Preferences -> Settings` and overwrite the d
 "terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
 ```
 
-## Build *EOSFactory*
+## Build *EOSFactory* on Linux
 
-Still in VSC, open the bash terminal, navigate to the `eosfactory` folder and run the build script:
-
-```
-./build.sh -e /path/to/your/local/EOSIO/repository -c gnu
-```
-
-**NOTE:** Make sure to supply the correct path for the `e` parameter - it's meant to be the path to the *EOSIO* source code that you have cloned (and then compiled) from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/mnt/x/Workspaces/EOS/eos` but yours will most probably be different:
+Still in VSC, open the bash terminal and define an environment variable called `EOSIO_SOURCE_DIR`:
 
 ```
-./build.sh -e /mnt/x/Workspaces/EOS/eos -c gnu
+echo 'export EOSIO_SOURCE_DIR=/path/to/your/local/EOSIO/repository' >> ~/.bashrc
+```
+
+**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned and built from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/~/Workspaces/EOS/eos` but yours will most probably be different:
+
+```
+echo 'export EOSIO_SOURCE_DIR=/~/Workspaces/EOS/eos' >> ~/.bashrc
+```
+
+Apply the above change to your bash console:
+
+```
+source ~/.bashrc
+```
+
+Finally, navigate to the `eosfactory` folder and run the build script:
+
+```
+./build.sh
+```
+
+**NOTE:** When the build process is finished you'll need to restart your VSC bash terminal.
+
+## Build *EOSFactory* on Windows
+
+Still in VSC, open the bash terminal and define an environment variable called `EOSIO_SOURCE_DIR`:
+
+```
+echo 'export EOSIO_SOURCE_DIR=/path/to/your/local/EOSIO/repository' >> ~/.bashrc
+```
+
+**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned and built from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/mnt/d/Workspaces/EOS/eos` but yours will most probably be different:
+
+```
+echo 'export EOSIO_SOURCE_DIR=/mnt/d/Workspaces/EOS/eos' >> ~/.bashrc
+```
+
+Apply the above change to your bash console:
+
+```
+source ~/.bashrc
+```
+
+Next, still in the VSC bash terminal run this command to define a Windows variable pointing to your Ubuntu home directory:
+
+```
+setx.exe "HOME" "path\\to\\your\\ubuntu\\home\\directory"
+```
+
+**NOTE:** Make sure to supply the correct path - most probably it will be similar to this:
+
+```
+%LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs
+```
+
+Finally, navigate to the `eosfactory` folder and run the build script:
+
+```
+./build.sh
 ```
 
 **NOTE:** When the build process is finished you'll need to restart VSC.
