--- a/docs/guides/01.InstallingEOSFactory.md
+++ b/docs/guides/01.InstallingEOSFactory.md
@@ -1,6 +1,6 @@
 # Installing *EOSFactory*
 
-*EOSFactory* is a truly cross-platform tool. The purpose of this tutorial is to demonstrate how to install it on any operating system, including Windows, Mac and Linux.
+*EOSFactory* is a truly cross-platform tool. The purpose of this tutorial is to demonstrate how to install it on any operating system, including Windows, Mac and Linux.?
 
 ## Prerequisites
 
@@ -83,7 +83,25 @@ setx.exe "HOME" "path\\to\\your\\ubuntu\\home\\directory"
 **NOTE:** Make sure to supply the correct path - most probably it will be similar to this:
 
 ```
-%LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs
+%LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs\\home\\$USER
+```
+
+If so, the entire command will be this: 
+
+```
+setx.exe "HOME" %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs\\home\\$USER
+```
+
+Restart your VSC and check if the variable `HOME` has been properly set by running this command in the VSC bash terminal:
+
+```
+echo $(cmd.exe /c dir %HOME%)
+```
+
+You should get a response similar to this:
+
+```
+5 Dir(s) 13,115,555,840 bytes...
 ```
 
 Finally, navigate to the `eosfactory` folder and run the build script:
