--- a/docs/guides/01.InstallingEOSFactory.md
+++ b/docs/guides/01.InstallingEOSFactory.md
@@ -114,15 +114,13 @@ Finally, navigate to the `eosfactory` folder and run the build script:
 
 ## Run Python CLI
 
-In *Visual Studio Code*, switch to the Bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
-
-Next, import the *EOSFactory* Python toolset:
-
-```
-import pyteos
-```
+In *Visual Studio Code*, switch to the bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
 We'll verify that *EOSFactory* works and is properly hooked up to *EOSIO* by attempting to start a local testnet:
+
+```
+import node
+```
 
 ```
 node.reset()
@@ -140,7 +138,7 @@ To stop the testnet:
 node.stop()
 ```
 
-And to exit the Python CLI and get back to the Bash terminal prompt:
+And to exit the Python CLI and get back to the bash terminal prompt:
 
 ```
 exit()
