--- a/docs/guides/03.CompilingEOSContractsInEOSFactory.md
+++ b/docs/guides/03.CompilingEOSContractsInEOSFactory.md
@@ -8,42 +8,34 @@ This tutorial assumes that you have successfully installed *EOSFactory*. If it's
 
 We also assume that you are familiar with the material covered in [Getting Started with EOS Contracts in *EOSFactory*](GettingStartedwithEOSContractsinEOSFactory.md).
 
-Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://github.com/EOSIO/eos/wiki/Tutorial-Hello-World-Contract), as it presents the default way to compile and deploy smart-contracts in EOS. What we present is an alternative.
+Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://github.com/EOSIO/eos/wiki/Tutorial-Hello-World-Contract), as it presents the default way to compile and deploy smart-contracts in EOS. What we present here is an alternative.
 
 ## Set up the Workspace
 
-In *Visual Studio Code*, switch to the Bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
-
-Next, import the *EOSFactory* Python toolset:
-
-```
-import pyteos
-```
-
-Then start the testnet:
-
-```
-node.reset()
-```
-
-And initialize the workspace:
-
-```
-node.init()
-```
+In *Visual Studio Code*, switch to the bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
 ## Create a Contract Template
 
-To create a contract template:
+To create a new contract from a pre-defined template:
 
 ```
-template = Template("hello")
+from eosf import *
+```
+
+```
+contract = Template("hello")
 ```
 
 To check the directory where the contract's files are located:
 
 ```
-template.path()
+contract.path()
+```
+
+You can keep your contracts in any location you want. However, if it's a non-standard location (i.e. different from `eos/build/contracts` or `eosfactory/contracts`) then you'll need to provide the entire path to its folder. e.g.
+
+```
+contract = Contract("/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
 ```
 
 ## Add C++ code
@@ -73,25 +65,39 @@ EOSIO_ABI( hello, (hi) )
 You can generate the web assembly code and ABI separately:
 
 ```
-template.wast()
+contract.compile_wast()
 ```
 
 ```
-template.abi()
+contract.compile_abi()
 ```
 
 Or you can generate both at the same time:
 
 ```
-template.compile()
+contract.compile()
 ```
 
 ## Deploy the Contract
 
+First, start the testnet and initialize the workspace:
+
+```
+import node, sess
+```
+
+```
+node.reset()
+```
+
+```
+sess.init()
+```
+
 Now we can deploy the compiled contract and keep reference to it for future use:
 
 ```
-contract = Contract("hello")
+contract.deploy()
 ```
 
 ## Test the Contract
@@ -99,11 +105,11 @@ contract = Contract("hello")
 We can play with the contract giving it different arguments:
 
 ```
-$ contract.push_action("hi", '{"user":"alice"}', alice)
+contract.push("hi", '{"user":"alice"}', sess.alice)
 ```
 
 ```
-contract.push_action("hi", '{"user":"carol"}', alice)
+contract.push("hi", '{"user":"carol"}', sess.alice)
 ```
 
 All the above variations should work, as the contract allows anyone to authorize it.
@@ -119,20 +125,32 @@ void hi( account_name user ) {
 }
 ```
 
-And then re-compile and re-deploy the contract:
+Re-compile the contract:
 
 ```
-template.compile()
+contract.compile()
+```
+
+Reset and re-initialize the testnet:
+
+```
+node.reset()
 ```
 
 ```
-contract = Contract("hello")
+sess.init()
 ```
 
-Now if we attempt to mismatch the user and the authority, the contract will throw an error:
+And finally, re-deploy the contract:
 
 ```
-contract.push_action("hi", '{"user":"carol"}', alice)
+contract.deploy()
+```
+
+Now, if we attempt to mismatch the user and the authority, the contract will throw an error:
+
+```
+contract.push("hi", '{"user":"carol"}', sess.alice)
 ```
 
 ```
@@ -142,5 +160,9 @@ Error Details:
 missing authority of carol
 ```
 
+But if we use the appropriate authority, there should no error:
 
+```
+contract.push("hi", '{"user":"carol"}', sess.carol)
+```
 
