--- a/docs/guides/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/guides/02.InteractingWithEOSContractsInEOSFactory.md
@@ -14,12 +14,10 @@ Once you have a good grasp how standard EOS tools like `cleos` and `eosiocpp` wo
 
 In *Visual Studio Code*, switch to the Bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
-Next, import the *EOSFactory* Python toolset:
+Next, import the *EOSFactory* toolset:
 
 ```
-import pyteos
-//import session as s
-//from session import *
+import node
 ```
 
 ## Start a Local Testnet
@@ -52,10 +50,10 @@ To stop and then continue running the testnet:
 node.stop()
 ```
 
-Wait until the testnet window disappears, and then:
+Wait a bit until the testnet window disappears, and then:
 
 ```
-node.continue()
+node.run()
 ```
 
 #### Stop & reset
@@ -66,7 +64,7 @@ To stop and reset the testnet:
 node.stop()
 ```
 
-Wait until the testnet window disappears, and then:
+Wait a bit until the testnet window disappears, and then:
 
 ```
 node.reset()
@@ -77,20 +75,28 @@ node.reset()
 To initialize the workspace:
 
 ```
-node.init()
+import sess
+```
+
+```
+sess.init()
 ```
 
 The initialization process does the following things:
 
 * deploys the *Bios* contract
 * creates a reference to the default `eosio` account
-* creates several test accounts `alice`, `bob` & `carol`
+* creates several test accounts: `alice`, `bob` & `carol`
 * creates a wallet and imports into it the keys of all the above accounts
 
 If you need additional test accounts, you can easily create them:
 
 ```
-charlie = Account("charlie", eosio)
+from eosf import *
+```
+
+```
+charlie = Account("charlie", sess.eosio)
 ```
 
 **NOTE:** The first argument indicates the new account's name, whereas the second indicates the master account, in this case the default `eosio` account.
@@ -98,43 +104,57 @@ charlie = Account("charlie", eosio)
 If you need to lock or unlock your wallet, use the `wallet` object to do it:
 
 ```
-wallet.lock()
+sess.wallet.lock()
 ```
 
 ```
-wallet.unlock()
+sess.wallet.unlock()
 ```
 
 ## Deploy the EOS Token Contract
 
-To deploy a pre-compiled contract just supply the name of the folder where it's located.
+To create a reference to an already compiled contract just supply the path to the folder where it's located:
 
-In this example we deploy the `eosio.token` contract:
+```
+from eosf import *
+```
+
+```
+contract = Contract("/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
+```
+
+Alternatively, supply just the name of the folder, if it can be found in a standard location, i.e. `eos/build/contracts` or `eosfactory/contracts`:
 
 ```
 contract = Contract("eosio.token")
 ```
 
-**NOTE:** Several things are happening behind the scenes: a new account is created with a new pair of keys and the contract is assigned to this new account. What you get back is the reference to this contract.
+And to deploy a contract use its `deploy` method:
+
+```
+contract.deploy()
+```
+
+**NOTE:** During deployment several things are happening behind the scenes: a new account is created with a new pair of keys and the contract is assigned to this new account.
 
 ## Create the EOS Token
 
 To create a new token we call the `create` action on the `eosio.token` contract with the proper arguments for this action:
 
 ```
-contract.push_action("create", '{"issuer":"eosio", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}')
+contract.push("create", '{"issuer":"eosio", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}')
 ```
 
-**NOTE:** The `push_action` method takes two arguments: the action name and its arguments in JSON format. Optionally, you can also add a third argument, i.e. the account whose permission is needed, but in this case it's not necessary, as the permission defaults to the account holding the contract.
+**NOTE:** The `push` method takes two arguments: the action name and its arguments in JSON format. Optionally, you can also add a third argument, i.e. the account whose permission is needed, but in this case it's not necessary, as the permission defaults to the account holding the contract.
 
-**NOTE:** If you want to see the actual transaction without broadcasting it, use the `show_action` method instead of `push_action`.
+**NOTE:** If you want to see the actual transaction without broadcasting it, use the `show` method instead of `push`.
 
 ## Issue EOS Tokens
 
 Now that we have created the token, the issuer can issue new tokens to `alice`:
 
 ```
-contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}', eosio)
+contract.push("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}', eosio)
 ```
 
 **NOTE:** In this case the permission is assigned to the default `eosio` account.
@@ -144,7 +164,7 @@ contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":
 Now that account `alice` has tokens, we will transfer some to account `carol`.  
 
 ```
-contract.push_action("transfer", '{"from":"alice", "to":"carol", "quantity":"25.0000 EOS", "memo":"memo"}', alice)
+contract.push("transfer", '{"from":"alice", "to":"carol", "quantity":"25.0000 EOS", "memo":"memo"}', alice)
 ```
 
 **NOTE:** As the third argument we pass the reference to the account `alice` to indicate that she is the one who authorized this action.
@@ -154,11 +174,11 @@ contract.push_action("transfer", '{"from":"alice", "to":"carol", "quantity":"25.
 From the contract's ABI we know that the table keeping track of the token balances is called `accounts`. Let's check the state of both accounts involved in the previous transaction:
 
 ```
-contract.get_table("accounts", alice)
+contract.get("accounts", alice)
 ```
 
 ```
-contract.get_table("accounts", carol)
+contract.get("accounts", carol)
 ```
 
-**NOTE:** The `get_table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
+**NOTE:** The `get` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
