--- a/docs/guides/01.InstallingEOSFactory.md
+++ b/docs/guides/01.InstallingEOSFactory.md
@@ -37,7 +37,7 @@ echo 'export EOSIO_SOURCE_DIR=/path/to/your/local/EOSIO/repository' >> ~/.bashrc
 **NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned and built from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/~/Workspaces/EOS/eos` but yours will most probably be different:
 
 ```
-echo 'export EOSIO_SOURCE_DIR=/~/Workspaces/EOS/eos' >> ~/.bashrc
+echo 'export EOSIO_SOURCE_DIR=~/Workspaces/EOS/eos' >> ~/.bashrc
 ```
 
 Apply the above change to your bash console:
@@ -49,7 +49,15 @@ source ~/.bashrc
 Finally, navigate to the `eosfactory` folder and run the build script:
 
 ```
-./build.sh
+cd eosfactory
+```
+
+```
+chmod +x build.sh
+```
+
+```
+sudo ./build.sh
 ```
 
 **NOTE:** When the build process is finished you'll need to restart your VSC bash terminal.
@@ -105,6 +113,10 @@ You should get a response similar to this:
 ```
 
 Finally, navigate to the `eosfactory` folder and run the build script:
+
+```
+cd eosfactory
+```
 
 ```
 ./build.sh
