--- a/docs/guides/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/guides/02.InteractingWithEOSContractsInEOSFactory.md
@@ -20,6 +20,12 @@ Next, import the *EOSFactory* toolset:
 import node
 ```
 
+If everything works fine you should see a message like this:
+
+```
+teos exe: /mnt/d/Workspaces/EOS/eosfactory/teos/build/teos
+```
+
 ## Start a Local Testnet
 
 To start your own single-node local testnet:
@@ -76,9 +82,6 @@ To initialize the workspace:
 
 ```
 import sess
-```
-
-```
 sess.init()
 ```
 
@@ -93,9 +96,6 @@ If you need additional test accounts, you can easily create them:
 
 ```
 from eosf import *
-```
-
-```
 charlie = Account("charlie", sess.eosio)
 ```
 
@@ -111,13 +111,18 @@ sess.wallet.lock()
 sess.wallet.unlock()
 ```
 
-## Deploy the EOS Token Contract
+**NOTE:** You don't need to supply the password, as it's kept for your convenience by Python. Obviously this only makes sense for a development environment.
+
+## Create reference to the EOS Token Contract
 
 To create a reference to an already compiled contract just supply the path to the folder where it's located:
 
 ```
 from eosf import *
+contract = Contract("/path/to/your/smart-contract/folder")
 ```
+
+**NOTE:** You need to supply a valid path to the folder where your smart-contract is located, e.g.
 
 ```
 contract = Contract("/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
@@ -129,7 +134,9 @@ Alternatively, supply just the name of the folder, if it can be found in a stand
 contract = Contract("eosio.token")
 ```
 
-And to deploy a contract use its `deploy` method:
+## Deploy the EOS Token Contract
+
+To deploy a smart-contract use its `deploy` method:
 
 ```
 contract.deploy()
@@ -142,19 +149,19 @@ contract.deploy()
 To create a new token we call the `create` action on the `eosio.token` contract with the proper arguments for this action:
 
 ```
-contract.push("create", '{"issuer":"eosio", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}')
+contract.push_action("create", '{"issuer":"eosio", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}')
 ```
 
-**NOTE:** The `push` method takes two arguments: the action name and its arguments in JSON format. Optionally, you can also add a third argument, i.e. the account whose permission is needed, but in this case it's not necessary, as the permission defaults to the account holding the contract.
+**NOTE:** The `push_action` method takes two arguments: the action name and its arguments in JSON format. Optionally, you can also add a third argument, i.e. the account whose permission is needed, but in this case it's not necessary, as the permission defaults to the account holding the contract.
 
-**NOTE:** If you want to see the actual transaction without broadcasting it, use the `show` method instead of `push`.
+**NOTE:** If you want to see the actual transaction without broadcasting it, use the `show_action` method instead of `push_action`.
 
 ## Issue EOS Tokens
 
 Now that we have created the token, the issuer can issue new tokens to `alice`:
 
 ```
-contract.push("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}', eosio)
+contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}', sess.eosio)
 ```
 
 **NOTE:** In this case the permission is assigned to the default `eosio` account.
@@ -164,7 +171,7 @@ contract.push("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}
 Now that account `alice` has tokens, we will transfer some to account `carol`.  
 
 ```
-contract.push("transfer", '{"from":"alice", "to":"carol", "quantity":"25.0000 EOS", "memo":"memo"}', alice)
+contract.push_action("transfer", '{"from":"alice", "to":"carol", "quantity":"25.0000 EOS", "memo":"memo"}', sess.alice)
 ```
 
 **NOTE:** As the third argument we pass the reference to the account `alice` to indicate that she is the one who authorized this action.
@@ -174,11 +181,11 @@ contract.push("transfer", '{"from":"alice", "to":"carol", "quantity":"25.0000 EO
 From the contract's ABI we know that the table keeping track of the token balances is called `accounts`. Let's check the state of both accounts involved in the previous transaction:
 
 ```
-contract.get("accounts", alice)
+contract.get_table("accounts", sess.alice)
 ```
 
 ```
-contract.get("accounts", carol)
+contract.get_table("accounts", carol)
 ```
 
-**NOTE:** The `get` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
+**NOTE:** The `get_table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
