--- a/docs/guides/03.CompilingEOSContractsInEOSFactory.md
+++ b/docs/guides/03.CompilingEOSContractsInEOSFactory.md
@@ -20,9 +20,6 @@ To create a new contract from a pre-defined template:
 
 ```
 from eosf import *
-```
-
-```
 contract = Template("hello")
 ```
 
@@ -32,10 +29,10 @@ To check the directory where the contract's files are located:
 contract.path()
 ```
 
-You can keep your contracts in any location you want. However, if it's a non-standard location (i.e. different from `eos/build/contracts` or `eosfactory/contracts`) then you'll need to provide the entire path to its folder. e.g.
+You can keep your contracts in any location you want. However, if it's a non-standard location (i.e. different from `eos/build/contracts` or `eosfactory/contracts`) then you'll need to provide the entire path to its folder, e.g.
 
 ```
-contract = Contract("/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
+contract = Contract("/mnt/d/Workspaces/EOS/eosfactory/contracts/test")
 ```
 
 ## Add C++ code
@@ -62,20 +59,20 @@ EOSIO_ABI( hello, (hi) )
 
 ## Compile the Contract
 
-You can generate the web assembly code and ABI separately:
+You can generate ABI and the web assembly code separately:
 
 ```
-contract.compile_wast()
+contract.abi()
 ```
 
 ```
-contract.compile_abi()
+contract.wast()
 ```
 
 Or you can generate both at the same time:
 
 ```
-contract.compile()
+contract.build()
 ```
 
 ## Deploy the Contract
@@ -83,18 +80,16 @@ contract.compile()
 First, start the testnet and initialize the workspace:
 
 ```
-import node, sess
-```
-
-```
+import node
 node.reset()
 ```
 
 ```
+import sess
 sess.init()
 ```
 
-Now we can deploy the compiled contract and keep reference to it for future use:
+Now we can deploy the compiled contract:
 
 ```
 contract.deploy()
@@ -105,11 +100,11 @@ contract.deploy()
 We can play with the contract giving it different arguments:
 
 ```
-contract.push("hi", '{"user":"alice"}', sess.alice)
+contract.push_action("hi", '{"user":"alice"}', sess.alice)
 ```
 
 ```
-contract.push("hi", '{"user":"carol"}', sess.alice)
+contract.push_action("hi", '{"user":"carol"}', sess.alice)
 ```
 
 All the above variations should work, as the contract allows anyone to authorize it.
@@ -128,16 +123,13 @@ void hi( account_name user ) {
 Re-compile the contract:
 
 ```
-contract.compile()
+contract.build()
 ```
 
-Reset and re-initialize the testnet:
+You might want to reset the testnet (but it's optional):
 
 ```
 node.reset()
-```
-
-```
 sess.init()
 ```
 
@@ -150,7 +142,7 @@ contract.deploy()
 Now, if we attempt to mismatch the user and the authority, the contract will throw an error:
 
 ```
-contract.push("hi", '{"user":"carol"}', sess.alice)
+contract.push_action("hi", '{"user":"carol"}', sess.alice)
 ```
 
 ```
@@ -163,6 +155,6 @@ missing authority of carol
 But if we use the appropriate authority, there should no error:
 
 ```
-contract.push("hi", '{"user":"carol"}', sess.carol)
+contract.push_action("hi", '{"user":"carol"}', sess.carol)
 ```
 
