--- a/docs/guides/04.UnitTestingEOSContractsInEOSFactory.md
+++ b/docs/guides/04.UnitTestingEOSContractsInEOSFactory.md
@@ -8,10 +8,6 @@ This tutorial assumes that you have successfully installed *EOSFactory*. If it's
 
 We also assume that you are familiar with the material covered in [Getting Started with EOS Contracts in *EOSFactory*](02.GettingStartedwithEOSContractsinEOSFactory.html).
 
-## Run Python CLI
-
-In *Visual Studio Code*, switch to the bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
-
 ## Create a unit-test
 
 Create a new Python file containing your unit-test. Here is the recommended structure:
@@ -25,10 +21,15 @@ def run():
     node.reset()
     sess.init()
     
-    # Your unit-test goes here
+    ############################
+    # Your unit-test goes here #
+    ############################
     
     print("Test OK")
     node.stop()
+    
+if __name__ == "__main__":
+    run()
 ```
 
 And below is an example of a unit-test for the `eosio.token` contract:
@@ -65,16 +66,22 @@ def run():
 
     print("Test OK")
     node.stop()
+    
+if __name__ == "__main__":
+    run()
 ```
 
-Assuming your unit-test file is named `test.py`, you can import it and then run it:
+Assuming your unit-test file is named `test.py`, you can run it from a Python console:
 
 ```
 import test
+test.run()
 ```
 
+Or you can do it directly from the bash console:
+
 ```
-test.run()
+python3 ./tests/test.py
 ```
 
 In our case the output looks like this:
